--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cicv"
+name = "rustlings"
 description = "Small exercises to get you used to reading and writing Rust code!"
 version = "5.5.1"
 authors = [
@@ -22,7 +22,7 @@ glob = "0.3.0"
 tokio = { version = "1.21.2", features = ["full"] }
 
 [[bin]]
-name = "cicv"
+name = "rustlings"
 path = "src/main.rs"
 
 [dev-dependencies]
