--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,6 +28,10 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y qemu qemu-system
+    - name: arceos
+      run: |
+        cd exercises/lessona/
+        ./verify a0
     - name: Run tests
       run: cargo install cargo-binutils && cargo install --path . && arceos run a0 && cargo test --test cicv --verbose
     - uses: yfblock/os-autograding@master
