--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,7 +30,7 @@ jobs:
         sudo apt-get install -y qemu qemu-system
     - name: arceos
       run: |
-        cd exercises/lessona/
+        cd exercises/lesson1/
         ./verify a0
     - name: Run tests
       run: cargo install cargo-binutils && cargo install --path . && arceos run a0 && cargo test --test cicv --verbose
