--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -28,6 +28,7 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y qemu qemu-system
+        rustup component add rust-src --toolchain stable-x86_64-unknown-linux-gnu
     - name: arceos
       run: |
         cd exercises/lesson1/
