--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,12 +29,14 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y qemu qemu-system
         rustup component add rust-src --toolchain stable-x86_64-unknown-linux-gnu
+        cargo install cargo-objcopy
+        cargo install cargo-binutils
     - name: arceos
       run: |
         cd exercises/lesson1/
         ./verify a0
     # - name: Run tests
-    #   run: cargo install cargo-binutils && cargo install --path . && arceos run a0 && cargo test --test cicv --verbose
+    #   run:  && cargo install --path . && arceos run a0 && cargo test --test cicv --verbose
     - uses: yfblock/os-autograding@master
       id: autograding
       with:
