--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,7 +29,7 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y qemu qemu-system
         rustup component add rust-src --toolchain stable-x86_64-unknown-linux-gnu
-        cargo install cargo-objcopy
+        rustup component add llvm-tools-preview
         cargo install cargo-binutils
     - name: arceos
       run: |
