--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -31,12 +31,8 @@ jobs:
         rustup component add rust-src --toolchain stable-x86_64-unknown-linux-gnu
         rustup component add llvm-tools-preview
         cargo install cargo-binutils
-    - name: arceos
-      run: |
-        cd exercises/lesson1/
-        ./verify a0
-    # - name: Run tests
-    #   run:  && cargo install --path . && arceos run a0 && cargo test --test cicv --verbose
+    - name: Run tests
+      run: cargo test --test cicv --verbose
     - uses: yfblock/os-autograding@master
       id: autograding
       with:
